# OOP

./: CMakeCache.txt  CMakeLists.txt  Makefile  controls.txt  diagram2.wsd  main.cc  test.txt
Reports/: Galkin_Aleksandr_lb1.docx  Galkin_Aleksandr_lb2.docx  Galkin_Aleksandr_lb3.docx  Galkin_Aleksandr_lb4.docx  ~$lkin_Aleksandr_lb1.docx  ~$lkin_Aleksandr_lb3.docx  ~$lkin_Aleksandr_lb4.docx  ~WRL0005.tmp
diagrams/: d.wsd  diagram1.wsd  diagram2.wsd  diagram3.wsd  diagram4.wsd
headers/: CollisionException.h  ComputerEnemy.h  DoubleDamage.h  FileHandler.h  Game.h  GameController.h  GameField.h  GameRenderer.h  GameState.h  NoSkillsException.h  OutOfFieldException.h  RandomShot.h  Scanner.h  Ship.h  ShipKilled.h  ShipManager.h  Skill.h  SkillManager.h  TerminalField.h  TerminalInputHandler.h  Tracker.h
sources/: CollisionException.cc  ComputerEnemy.cc  DoubleDamage.cc  FileHandler.cc  Game.cc  GameField.cc  GameState.cc  NoSkillsException.cc  OutOfFieldException.cc  RandomShot.cc  Scanner.cc  Ship.cc  ShipKilled.cc  ShipManager.cc  Skill.cc  SkillManager.cc  TerminalField.cc  TerminalInputHandler.cc  Tracker.cc
